Bug 242382 Trunk build failure in nsObjectFrame.cpp patch by roland.mainz@nrubsig.org r=roc sr=roc